# Vesta

./: .clangd  .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md  run.bat
src/: VTMath.cpp  VTMath.h
src/Common/: Config.h  IApp.h  IGraphics.h  IInput.h  IOperatingSystem.h  IResource.h  RingBuffer.hpp  SlangCompiler.cpp  SlangCompiler.h
src/Common/Graphics/: Direct3D12.cpp
src/Common/OS/: WindowBase.cpp  WindowsInput.cpp  WindowsWindow.cpp
src/Common/Resource/: Resource.cpp
src/Common/Util/: CameraController.cpp  CameraController.h  Logger.h  Time.cpp  Time.h
src/Examples/00_Init/: main.cpp
src/Examples/01_Triangle/: main.cpp
src/Examples/02_ConstantBuffer/: main.cpp
src/Examples/03_MovableObjects/: main.cpp
src/Examples/04_Camera/: main.cpp
src/Examples/05_MultiObjects/: main.cpp
src/Examples/06_Lighting/: main.cpp
src/Examples/07_Pong/: main.cpp
src/Shaders/: Light.hlsl  Simple.slang  Simple2.hlsl  SimpleCamera.hlsl  SimpleConstants.hlsl  SimpleMovable.hlsl  SimplePong.hlsl
